# ColorJourney

./: .dockerignore  .gitignore  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CMakeConfig.cmake.in  CMakeLists.txt  CONTRIBUTING.md  CONTRINUTING.md  ColorJourney.podspec  DRAFT_caching_spec.md  Dockerfile  LICENSE  Makefile  Makefile.serve  Package.swift  README.md  docker-compose.yml  docs-plan.md  test_journey_output
.github/ISSUE_TEMPLATE/: bug_report_template.md  feature_request.md
.github/agents/: copilot-instructions.md
.github/prompts/: plan-swiftPlaygroundFeatureReview.prompt.md
.github/workflows/: badge-update.yml  core-ci.yml  github_workflow.txt  parity.yml  release-artifacts.yml  release.yml  swift-ci.yml
.specify/: DOCUMENTATION_STATUS.md  SWIFT_DOCC_INTEGRATION.md  doxyfile
.specify/memory/: constitution.md
DevDocs/: 00_START_HERE.md  ANALYSIS_INDEX.md  ARTIFACTS_SPECIFICATION.md  BADGES.md  BRANCHING_STRATEGY.md  BRANCH_STRATEGY_IMPLEMENTATION.md  DOCUMENTATION_SUMMARY.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_STATUS.md  INCREMENTAL_SWATCH_SPECIFICATION.md  OUTPUT_PATTERNS.md  RC_WORKFLOW.md  README.md  RELEASE_PLAYBOOK.md  RELEASE_TAGGING.md  USAGE_AND_FULFILLMENT_ANALYSIS.md
Docs/: RELEASES.md  index.html
Docs/api/: troubleshooting.html
Examples/: CExample.c  DocstringValidation.swift  Example.swift  ExampleUsage.swift  SwiftExample.swift
Examples/CocoaPodsDemo/: Podfile  Usage.swift
Examples/FeaturePlayground.playground/: contents.xcplayground
Examples/JourneyPreview/: ContentView.swift  JourneyPreviewApp.swift  Package.swift  README.md  XCODE_GUIDE.md
Examples/SwatchDemo/: README.md  main.swift
FeaturePlayground.playground/: FEATURE_INVENTORY.md  README.md  contents.xcplayground
FeaturePlayground.playground/Sources/: ColorUtilities.swift
Sources/CColorJourney/: ColorJourney.c
Sources/CColourJourney/: ColourJourney.h
Sources/ColorJourney/: ColorJourney.swift
Sources/ColourJourney/: ColourJourney.swift
Sources/wasm/: build-wasm.sh  color_journey.c  color_journey_runner.h
Tests/CColorJourneyTests/: README.md  performance_baseline.c  test_c_core.c  test_incremental.c  test_journey_output.c
Tests/ColorJourneyTests/: ChunkSizeBenchmarkTests.swift  ColorJourneyTests.swift  IntegrationTests.swift  ThreadSafetyTests.swift
Tests/Parity/: parity_c_runner.c  parity_wasm_as_c_runner.c
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  ColorJourneyConfig.cmake  Makefile  cmake_install.cmake
scripts/: audit-artifacts.sh  create-rc-branch.sh  delete-rc-branch.sh  increment-rc.sh  package-c.sh  package-swift.sh  patch-docc-baseurl.sh  publish-cocoapods.sh  tag-release.sh  test-release-automation.sh  validate-playground.sh
specs/001-comprehensive-documentation/: plan.md  spec.md
specs/002-professional-release-workflow/: spec.md  tasks.md
specs/003.5-c-algo-parity/: INDEX.md  PHASE-9-DELIVERABLES.md  quickstart.md  review.md  spec.md
specs/004-incremental-creation/: IMPLEMENTATION_STATUS.md  README.md  delta-algorithm.md  implementation-plan.md  plan.md  rollout-decision.md  spec.md  tasks.md
specs/005-c-algo-parity/: PHASE-9-SPEC-SUMMARY.md  phase-9-swift-parity.md  plan.md  spec.md  (+3 more)
(+61 files in other folders)
